# ds_hybrid_mt

./: CMakeLists.txt  Makefile  aclocal.m4  config.h  config.h.in~  config.status  configure.ac  ds_hybrid_mt.sublime-workspace  dspaces_config
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
dart/: Makefile  debug.h  list.h
dart/gni/: dart_rpc_gni.c  dart_rpc_gni.h  dart_rpc_gni_1.c  dc_base_gni.c  ds_base_gni.c  ds_base_gni.h
dart/ib/: dart_rpc_ib.c  dart_rpc_ib.h  ds_base_ib.c
dart/tcp/: dart_rpc_tcp.c  dart_rpc_tcp.h  dc_base_tcp.c  ds_base_tcp.c  ds_base_tcp.h
include/: common_dataspaces.h  queue.h  ss_data.h
scripts/: dspaces_config.makesrc
src/: Makefile  common_dataspaces.c  dataspaces.c  dataspaces_fortran.c  dc_gspace.c  ds_gspace.c  ds_gspace2.c
tau file/: direct_mt_tau_result.txt  mt_tau_result.txt
tcp_bak/: dart_rpc_tcp.c
tests/: Makefile  Makefile.am
tests/3lev/: Makefile  Makefile.am  cal_3lev_test.sh  cal_mt.sh  cleanall.sh  recompile.sh  test_get_run.c  test_lev1_w1.c  test_lev1_w2.c  test_lev2.c  test_lev3.c  test_writer_1.c
tests/C/: 231026.cobaltlog  231046.cobaltlog  231046.error  DS_example.377629.stderr  Makefile  Makefile.am  cal_client  cal_local_run.sh  cal_server  callpath.ppk  caper_run.sh  caper_server  cleanall.sh  common.c  conf  conf.0  conf.1  conf.2  dataspaces.conf  dataspaces_server  ds_mt_debug.e4038910  hostfile-app1  hostfile-server  job.dspaces.theta.sh  local_run.sh  monitor.sh  normal_ds_mem.ppk  orig.ppk  performance_bench.txt  profile.0.0.0  profile.0.0.1  recompile.sh  run_3d.phs  run_compare_theta.sh  run_compare_theta_thrd_2.sh  run_job.sh  run_theta.sh  run_titan.phs  run_titan.sh  simple_test.sh  (+16 more)
tests/C/crash/wrong_rr_index/: index
tests/C_BAK/: cal_local_run.sh  cal_server  cal_test_wr.sh  caper_run.sh
tests/Fortran/: Makefile  couple_comm.mod  test_get  test_put
tests/MT/: Makefile  Makefile.am  cal_mt.sh  common.c  conf  dataspaces_server  recompile.sh  test_get_run.c  test_put_run.c  test_reader  test_reader.c  test_reader_1  test_reader_2  test_reader_2.c  test_writer  test_writer.c  test_writer_1  test_writer_2  test_writer_2.c
tests/MT/3lev/: Makefile  Makefile.am  cal_3lev_test.sh  common.c  recompile.sh  test_get_run.c  test_lev1_w1.c  test_lev1_w2.c  test_lev2.c  test_lev3.c  test_put_run.c  test_reader_1.c
